# mod2lib

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
doc/: DesignIssues.md
examples/basic_example/: Cargo.toml
examples/basic_example/src/: constants.rs  main.rs
examples/wl_example/: Cargo.toml
examples/wl_example/src/: data_atoms.rs  main.rs
src/: lib.rs
src/abstractions/: erased.rs  graph.rs  hash.rs  heap.rs  mod.rs  nat_set.rs  rccell.rs  string_join.rs  string_util.rs
src/abstractions/log/: formatter.rs  macros.rs  mod.rs  threshold_filter.rs
src/api/: atom.rs  dag_node.rs  mod.rs  symbol.rs  term.rs  variable.rs
src/api/free_theory/: free_dag_node.rs  free_term.rs  mod.rs
src/core/: dag_node_core.rs  format.rs  local_bindings.rs  mod.rs  module.rs  narrowing_variable_info.rs  root_container.rs  substitution.rs  term_core.rs  variable_info.rs
src/core/allocator/: arena.rs  bucket.rs  gc_vector.rs  mod.rs  node_allocator.rs  node_vector.rs  storage_allocator.rs  tests.rs
src/core/pre_equation/: condition.rs  mod.rs
src/core/sort/: collection.rs  kind.rs  kind_error.rs  mod.rs  sort.rs  sort_spec.rs
tools/: make_new_project.sh
