[package]
name        = "mod2lib"
description = "A RIIR for Maude's state-of-the-art pattern matching algorithms"
authors     = ["Robert Jacobson <rljacobson@gmail.com"]
repository  = "https://www.github.com/rljacobson/mod2lib"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
readme      = "README.md"
keywords    = ["pattern-matching", "matching-algorithms", "unification", "term-rewriting", "equational-logic"]
categories  = ["algorithms", "compilers", "mathematics", "science", "parsing"]
publish     = false


[dependencies]
string_cache = "0.8.7" # String interning
bit-set      = "0.8.0" # NatSet implementation

## Logging ##
tracing = "0.1"
tracing-subscriber = "0.3"

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"

[[example]]
name = "basic_example"
path = "examples/basic_example/src/main.rs"
