[workspace]
members = [
    "examples/wl_example",
]

[workspace.package]
authors     = ["Robert Jacobson <rljacobson@gmail.com"]
repository  = "https://www.github.com/rljacobson/mod2lib"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
readme      = "README.md"

[workspace.dependencies]
string_cache = "0.8"  # String interning
bit-set      = "0.8"  # NatSet implementation
enumflags2   = "0.7"  # BitFlags from an enum
once_cell    = "1.20" # Lazy statics
rand         = "0.9.0-alpha.2" # Testing

paste = "1.0" # Concat identifiers in `implement_data_atom!` macro

total_float_wrap = "0.1.1" # Totally ordered, hashable floating point types.

## Logging ##
tracing = "0.1"
tracing-subscriber = "0.3"


[package]
name        = "mod2lib"
description = "A RIIR for Maude's state-of-the-art pattern matching algorithms"
authors.workspace    = true
repository.workspace = true
version.workspace    = true
edition.workspace    = true
license.workspace    = true
readme.workspace     = true
keywords    = ["pattern-matching", "matching-algorithms", "unification", "term-rewriting", "equational-logic"]
categories  = ["algorithms", "compilers", "mathematics", "science", "parsing"]
publish     = false

[features]
gc_debug = []
default = ["gc_debug"]

[dependencies]

paste.workspace = true

string_cache.workspace = true
bit-set.workspace      = true
enumflags2.workspace   = true
once_cell.workspace    = true
rand.workspace         = true

tracing.workspace            = true
tracing-subscriber.workspace = true


[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
